--- a/.github/workflows/select-hardware-cypress.yml
+++ b/.github/workflows/select-hardware-cypress.yml
@@ -15,7 +15,7 @@ jobs:
   #         browser: chrome
 
   _Firefox: 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     steps: 
       - name: Checkout
         uses: actions/checkout@v2
@@ -24,8 +24,10 @@ jobs:
         with:
           build: npx cypress info
           start: cypress open
+          wait-on: 'http://localhost:3000'
           browser: firefox
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
 
   
