--- a/.github/workflows/select-hardware-cypress.yml
+++ b/.github/workflows/select-hardware-cypress.yml
@@ -13,7 +13,9 @@ jobs:
           build: npx cypress info
           start: cypress open
           wait-on: 'http://localhost:3000'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           browser: chrome
+
 
   _Firefox: 
     runs-on: ubuntu-18.04
@@ -26,9 +28,8 @@ jobs:
           build: npx cypress info
           start: cypress open
           wait-on: 'http://localhost:3000'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           browser: firefox
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
 
   
