--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/graveflex/plume-shop-automation#readme",
   "dependencies": {
+    "@actions/core": "^1.3.0",
+    "@actions/github": "^5.0.0",
     "cypress": "^7.3.0"
   }
 }
