--- a/.github/workflows/plume_shop_functionality.yml
+++ b/.github/workflows/plume_shop_functionality.yml
@@ -7,14 +7,17 @@ jobs:
     steps: 
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - name: Run integration tests with cypress X Chrome
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v2.9.7
         id: cypress
-
         with: 
           build: npx cypress info
           start: cypress open
-          # wait-on: 'http://localhost:3000'
+          wait-on: 'http://localhost:3000'
           browser: chrome
       - name: Get-Results
         uses: ./ # URL TO ACTION
@@ -30,9 +33,9 @@ jobs:
       - name: Run itegration tests with cypress X firefox
         uses: cypress-io/github-action@v2
         with:
-          build: npx cypress info
+          # build: npx cypress info
           start: cypress open
-          # wait-on: 'http://localhost:3000'
+          wait-on: 'http://localhost:3000'
           browser: firefox
   
 
