--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@actions/core": "^1.3.0",
     "@actions/github": "^5.0.0",
-    "cypress": "^7.3.0"
+    "cypress": "^7.3.0",
+    "xvfb": "^0.4.0"
   }
 }
