--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "ci:start-server": "yarn dev",
     "cypress:open": "cypress open",
+    "cy:run": "cypress run --headless --browser chrome",
+    "cu:cy-run": "start-server-and-test ci:start-server http://localhost:3001 cy:run",
     "cy:run:chrome": "cypress run --browser chrome",
     "cy:run:firefox": "cypress run --browser firefox",
     "cy:run:edge": "cypress run --browser edge"
@@ -25,6 +28,7 @@
     "@actions/core": "^1.3.0",
     "@actions/github": "^5.0.0",
     "cypress": "^7.3.0",
+    "start-server-and-test": "^1.12.3",
     "xvfb": "^0.4.0"
   }
 }
