--- a/.github/workflows/plume-action.yml
+++ b/.github/workflows/plume-action.yml
@@ -7,10 +7,10 @@ jobs:
     steps: 
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+      # - name: Extract branch name
+      #   shell: bash
+      #   run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      #   id: extract_branch
       - name: Run integration tests with cypress X Chrome
         uses: cypress-io/github-action@v2.9.7
         id: cypress
