--- a/.github/workflows/plume-action.yml
+++ b/.github/workflows/plume-action.yml
@@ -17,7 +17,7 @@ jobs:
         with: 
           build: npx cypress info
           start: cypress open
-          wait-on: 'http://localhost:3000'
+          # wait-on: 'http://localhost:3000'
           browser: chrome
       - name: Get-Results
         uses: ./ # URL TO ACTION
@@ -35,7 +35,7 @@ jobs:
         with:
           # build: npx cypress info
           start: cypress open
-          wait-on: 'http://localhost:3000'
+          # wait-on: 'http://localhost:3000'
           browser: firefox
   
 
